feat: 환영 문구 UI 추가

--- a/DearMe/src/styles/index.css
+++ b/DearMe/src/styles/index.css
@@ -30,3 +30,8 @@ h1 {
   src: url('/fonts/Gelasio-Regular.ttf');
 }
 
+@font-face {
+  font-family: 'Gowun Batang';
+  src: url('/fonts/GowunBatang-Regular.ttf');
+}
+
