--- a/DearMe/src/styles/WelcomeSections.css
+++ b/DearMe/src/styles/WelcomeSections.css
@@ -1,14 +1,16 @@
 .welcomeSections-container {
-    position: fixed;
+    position: relative;
     width: 650px;
     height: 180px;
     left: 50%;
-    top: 100px;
+    top: 50px;
     transform: translateX(-50%);
 
     display: flex;
     flex-direction: column;
     gap: 0px;
+
+    z-index: 0;
 }
 
 .welcomeSections-container p {
