--- a/DearMe/src/styles/BottomBackground.css
+++ b/DearMe/src/styles/BottomBackground.css
@@ -1,10 +1,11 @@
 .bottom-background-container {
     position: relative;
     width: 1074px;
-    height: 664px;
+    height: 700px;
     left: 50%;
     transform: translateX(-50%);
     top: 120px;
+    margin-bottom: 200px;
 
     background: rgba(0, 0, 0, 0.5);
     border-radius: 15px;
@@ -13,6 +14,12 @@
     animation: fadeInUp-bottomBackground 2s ease forwards;
 
     animation-delay: 2s;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: visible;
+    z-index: 1;
 }
 
 @keyframes fadeInUp-bottomBackground {
@@ -23,6 +30,6 @@
 
     100% {
         opacity: 1;
-        transform: translateX(-50%)  translateY(0);
+        transform: translateX(-50%) translateY(0);
     }
 }
