--- a/DearMe/src/styles/MemoCard.css
+++ b/DearMe/src/styles/MemoCard.css
@@ -1,4 +1,4 @@
-.memo-card-container{
+.memo-card-container {
     position: relative;
     display: flex;
     flex-direction: row;
@@ -12,6 +12,7 @@
     height: 40px;
     padding-left: 5px;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .memo-card-title {
