--- a/DearMe/src/styles/App.css
+++ b/DearMe/src/styles/App.css
@@ -11,9 +11,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -22,6 +24,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -39,4 +42,19 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.content-stack-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 95%;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.chat-button-container-below {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
 }
