--- a/DearMe/src/styles/CalendarSection.css
+++ b/DearMe/src/styles/CalendarSection.css
@@ -80,3 +80,43 @@
   color: rgba(255, 255, 255, 0.6);
   cursor: pointer !important;
 }
+
+.calendar-memo-list {
+  position: absolute;
+  top: 33px;
+  left: 10px;
+  right: 3px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+  max-height: 60px;
+  overflow: hidden;
+}
+
+.calendar-memo-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #ffffff;
+  border-radius: 7px;
+  padding: 1px 3px;
+  width: 70%;
+  box-sizing: border-box;
+}
+
+.calendar-memo-emoji {
+  font-size: 0.7rem;
+  margin-right: 3px;
+  font-family: 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+}
+
+.calendar-memo-title {
+  font-size: 0.75rem;
+  font-family: 'Gowun Batang', serif;
+  color: #000000;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  min-width: 0;
+}
