--- a/DearMe/src/styles/App.css
+++ b/DearMe/src/styles/App.css
@@ -58,3 +58,13 @@
   display: flex;
   justify-content: flex-end;
 }
+
+.chat-screen-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: flex-start;
+  box-sizing: border-box;
+}
