--- a/DearMe/src/styles/App.css
+++ b/DearMe/src/styles/App.css
@@ -55,13 +55,14 @@
 
 .chat-button-container-below {
   width: 100%;
+  margin-top: 10px;
   display: flex;
   justify-content: flex-end;
 }
 
 .chat-screen-container {
-  width: 100%;
-  height: 100%;
+  width: 95%;
+  height: 95%;
   display: flex;
   flex-direction: column;
   align-items: center; 
